--- a/blog.html
+++ b/blog.html
@@ -239,7 +239,7 @@
                 </div>
             </div>
             <div class="footer-image">
-                <img src="media/Union-footer.png" alt="presence">
+                <img src="media/Union-footer.webp" alt="presence">
             </div>
             <div class="arusa-footer-block">
                 <p class="arusa-footer">© arusa 2022 | misha fychak</p>
