--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link type="media/png" sizes="16x16" rel="icon" href="media/x-icon.png">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="scripts/geo.js"></script>
 </head>
 
 <body>
