--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link type="media/png" sizes="16x16" rel="icon" href="media/x-icon.png">
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="scripts/geo.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -266,73 +267,90 @@
 
             <div class="big-cards white">
                 <div class="product-row">
-                    <div class="cards-blocks">
-                        <div class="card hvr-shrink scrollreveal">
-                            <img src="media/sofa.webp" alt="presence" width="100%">
-                            <div class="product-text-row">
-                                <p class="product-name">native iron chair</p>
-                                <p class="product-price">$4.990</p>
+                    <div class=" welcome-block swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide slogan hvr-shrink">
+                                <div class="product-row">
+                                    <div class="cards-blocks">
+                                        <div class="card hvr-shrink">
+                                            <img src="media/sofa.webp" alt="presence" width="100%">
+                                            <div class="product-text-row">
+                                                <p class="product-name">native iron chair</p>
+                                                <p class="product-price">$4.990</p>
+                                            </div>
+                                        </div>
+                                        <div class="card hvr-shrink">
+                                            <img src="media/nightstand.webp" alt="presence" width="100%">
+                                            <div class="product-text-row">
+                                                <p class="product-name">native iron chair</p>
+                                                <p class="product-price">$4.990</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="cards-blocks">
+                                        <div class="card hvr-shrink">
+                                            <img src="media/sphere_lamp.webp" alt="presence" width="100%">
+                                            <div class="product-text-row">
+                                                <p class="product-name">native iron chair</p>
+                                                <p class="product-price">$4.990</p>
+                                            </div>
+                                        </div>
+                                        <div class="card hvr-shrink">
+                                            <img src="media/tumba.webp" alt="presence" width="100%">
+                                            <div class="product-text-row">
+                                                <p class="product-name">native iron chair</p>
+                                                <p class="product-price">$4.990</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="swiper-slide slogan hvr-shrink">
+                                <div class="product-row">
+                                    <div class="cards-blocks">
+                                        <div class="card hvr-shrink">
+                                            <img src="media/grey_sofa.webp" alt="presence" width="100%">
+                                            <div class="product-text-row">
+                                                <p class="product-name">native iron chair</p>
+                                                <p class="product-price">$4.990</p>
+                                            </div>
+                                        </div>
+                                        <div class="card hvr-shrink">
+                                            <img src="media/white_nightstand.webp" alt="presence" width="100%">
+                                            <div class="product-text-row">
+                                                <p class="product-name">native iron chair</p>
+                                                <p class="product-price">$4.990</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="cards-blocks">
+                                        <div class="card hvr-shrink">
+                                            <img src="media/rainbow_lamp.webp" alt="presence" width="100%">
+                                            <div class="product-text-row">
+                                                <p class="product-name">native iron chair</p>
+                                                <p class="product-price">$4.990</p>
+                                            </div>
+                                        </div>
+                                        <div class="card hvr-shrink">
+                                            <img src="media/rock_sphere.webp" alt="presence" width="100%">
+                                            <div class="product-text-row">
+                                                <p class="product-name">native iron chair</p>
+                                                <p class="product-price">$4.990</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
-                        <div class="card hvr-shrink scrollreveal">
-                            <img src="media/nightstand.webp" alt="presence" width="100%">
-                            <div class="product-text-row">
-                                <p class="product-name">native iron chair</p>
-                                <p class="product-price">$4.990</p>
-                            </div>
-                        </div>
+                        <div class="swiper-pagination"></div>
                     </div>
-                    <div class="cards-blocks">
-                        <div class="card hvr-shrink scrollreveal">
-                            <img src="media/sphere_lamp.webp" alt="presence" width="100%">
-                            <div class="product-text-row">
-                                <p class="product-name">native iron chair</p>
-                                <p class="product-price">$4.990</p>
-                            </div>
-                        </div>
-                        <div class="card hvr-shrink scrollreveal">
-                            <img src="media/tumba.webp" alt="presence" width="100%">
-                            <div class="product-text-row">
-                                <p class="product-name">native iron chair</p>
-                                <p class="product-price">$4.990</p>
-                            </div>
-                        </div>
-                    </div>
+
+
                 </div>
-                <div class="product-row">
-                    <div class="cards-blocks">
-                        <div class="card hvr-shrink scrollreveal">
-                            <img src="media/grey_sofa.webp" alt="presence" width="100%">
-                            <div class="product-text-row">
-                                <p class="product-name">native iron chair</p>
-                                <p class="product-price">$4.990</p>
-                            </div>
-                        </div>
-                        <div class="card hvr-shrink scrollreveal">
-                            <img src="media/white_nightstand.webp" alt="presence" width="100%">
-                            <div class="product-text-row">
-                                <p class="product-name">native iron chair</p>
-                                <p class="product-price">$4.990</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cards-blocks">
-                        <div class="card hvr-shrink scrollreveal">
-                            <img src="media/rainbow_lamp.webp" alt="presence" width="100%">
-                            <div class="product-text-row">
-                                <p class="product-name">native iron chair</p>
-                                <p class="product-price">$4.990</p>
-                            </div>
-                        </div>
-                        <div class="card hvr-shrink scrollreveal">
-                            <img src="media/rock_sphere.webp" alt="presence" width="100%">
-                            <div class="product-text-row">
-                                <p class="product-name">native iron chair</p>
-                                <p class="product-price">$4.990</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
                 <a href="#shopall" class="product-shop">shop all</a>
             </div>
         </div>
@@ -521,6 +539,18 @@
             </div>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>var swiper = new Swiper(".mySwiper", {
+            direction: "horizontal",
+            loop: true,
+            autoplay: {
+                delay: 5000,
+            },
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+        });</script>
     <script src="scripts/script.js"></script>
 </body>
 
